--- a/planoEstudo.html
+++ b/planoEstudo.html
@@ -8,8 +8,6 @@
 	<meta name="description" content="Area do aluno &amp; Dashboard">
 	<meta name="Instituto Educar é a Nossa História" content="Educacional">
 
-
-
 	<!-- img -->
 	<link rel="shortcut icon" href="/img/img-logo/favicon.png" type="image/x-icon">
 
@@ -17,16 +15,13 @@
 	<!-- css custon -->
 	<link href="/css/style.css" rel="stylesheet">
 
-
-
-
 	<title>IED - Área do aluno</title>
 
 	<!-- PICK ONE OF THE STYLES BELOW -->
-	<!-- <link href="css/modern.css" rel="stylesheet"> -->
-	<!-- <link href="css/classic.css" rel="stylesheet"> -->
-	<!-- <link href="css/dark.css" rel="stylesheet"> -->
-	<!-- <link href="css/light.css" rel="stylesheet"> -->
+	<link href="css/modern.css" rel="stylesheet">
+	<link href="css/classic.css" rel="stylesheet">
+	<link href="css/dark.css" rel="stylesheet">
+	<link href="css/light.css" rel="stylesheet">
 
 	<!-- BEGIN SETTINGS -->
 	<!-- You can remove this after picking a style -->
@@ -40,6 +35,7 @@
 </head>
 
 <body>
+
 	<div class="wrapper">
 
 		<!-- Navbar -->
@@ -163,63 +159,7 @@
 
 		<div class="main">
 
-			<nav class="navbar navbar-expand navbar-theme">
-				<a class="sidebar-toggle d-flex me-2">
-					<i class="hamburger align-self-center"></i>
-				</a>
-				<div class="navbar-collapse collapse">
-					<ul class="navbar-nav ms-auto">
-						<li class="nav-item dropdown ms-lg-2">
-							<a class="nav-link dropdown-toggle position-relative" href="#" id="alertsDropdown"
-								data-bs-toggle="dropdown">
-								<i class="align-middle fas fa-bell"></i>
-								<span class="indicator"></span>
-							</a>
-							<div class="dropdown-menu dropdown-menu-lg dropdown-menu-end py-0"
-								aria-labelledby="alertsDropdown">
-								<div class="dropdown-menu-header">
-									Avisos
-								</div>
-								<div class="list-group">
-									<a href="#" class="list-group-item">
-										<div class="row g-0 align-items-center">
-											<div class="col-2">
-												<i class="ms-1 text-danger fas fa-fw fa-bell"></i>
-											</div>
-											<div class="col-10">
-												<div class="text-dark">Aviso</div>
-												<div class="text-muted small mt-1">Estamos enviando esse aviso para
-													teste</div>
-												<div class="text-muted small mt-1">16 de agosto</div>
-											</div>
-										</div>
-									</a>
-								</div>
-								<div class="dropdown-menu-footer">
-									<a href="#" class="text-muted">Todos os avisos</a>
-								</div>
-							</div>
-						</li>
-						<li class="nav-item dropdown ms-lg-2">
-							<a class="nav-link dropdown-toggle position-relative" href="#" id="userDropdown"
-								data-bs-toggle="dropdown">
-								<i class="align-middle fas fa-cog"></i>
-							</a>
-							<div class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
-								<a class="dropdown-item" href="/settings.html"><i
-										class="align-middle me-1 fas fa-fw fa-user"></i> Meu perfil</a>
-								<div class="dropdown-divider"></div>
-								<a class="dropdown-item" href="#"><i
-										class="align-middle me-1 fas fa-fw fa-arrow-alt-circle-right"></i> Sair</a>
-							</div>
-						</li>
-					</ul>
-				</div>
-			</nav>
-			<!-- Navbar /end -->
-
-		<div class="main">
-
+			<!-- Navbar -->
 			<nav class="navbar navbar-expand navbar-theme">
 				<a class="sidebar-toggle d-flex me-2">
 					<i class="hamburger align-self-center"></i>
@@ -274,63 +214,171 @@
 				</div>
 			</nav>
 
-			<div class="position-container"> 
+			<div class="config-form-estud">
 
-			<div class="position-player"> 
+			<div class="col-12">
+				<div class="card">
+					<div class="card-header">
+						<h5 class="card-title">Plano de estudos</h5>
+						<h6 class="card-subtitle text-muted">Aqui você acompanha todo conteúdo visualizado ou que você ainda não visualizou.</h6>
+					</div>
+					<div class="table-responsive">
+						<table class="table mb-0">
+							<thead>
+								<tr>
+									<th scope="col">#Matérias</th>
+									<th scope="col">Gramática</th>
+									<th scope="col">Redação</th>
+									<th scope="col">Literatura</th>
+									<th scope="col">História</th>
+									<th scope="col">Gegrafia</th>
+									<th scope="col">Química</th>
+									<th scope="col">Física</th>
+									<th scope="col">Inglês</th>
+									<th scope="col">Matemática</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr>
+									<th scope="row">Semana 1</th>
+									<td>Aula 30 - Aula prática</td>
+									<td>Aula 25 - Exercícios</td>
+									<td>Aula 40 - Conteúdo específico</td>
+									<td>Aula 30 - Aula prática</td>
+									<td>Aula 25 - Exercícios</td>
+									<td>Aula 40 - Conteúdo específico</td>
+									<td>Aula 30 - Aula prática</td>
+									<td>Aula 25 - Exercícios</td>
+									<td>Aula 40 - Conteúdo específico</td>
+								</tr>
+								<tr>
+									<th scope="row">Semana 2</th>
+									<td>Aula 30 - Aula prática</td>
+									<td>Aula 25 - Exercícios</td>
+									<td>Aula 40 - Conteúdo específico</td>
+									<td>Aula 30 - Aula prática</td>
+									<td>Aula 25 - Exercícios</td>
+									<td>Aula 40 - Conteúdo específico</td>
+									<td>Aula 30 - Aula prática</td>
+									<td>Aula 25 - Exercícios</td>
+									<td>Aula 40 - Conteúdo específico</td>
+								</tr>
+								<tr>
+									<th scope="row">Semana 3</th>
+									<td>Aula 30 - Aula prática</td>
+									<td>Aula 25 - Exercícios</td>
+									<td>Aula 40 - Conteúdo específico</td>
+									<td>Aula 30 - Aula prática</td>
+									<td>Aula 25 - Exercícios</td>
+									<td>Aula 40 - Conteúdo específico</td>
+									<td>Aula 30 - Aula prática</td>
+									<td>Aula 25 - Exercícios</td>
+									<td>Aula 40 - Conteúdo específico</td>
+								</tr>
+								<tr>
+									<th scope="row">Semana 4</th>
+									<td>Aula 30 - Aula prática</td>
+									<td>Aula 25 - Exercícios</td>
+									<td>Aula 40 - Conteúdo específico</td>
+									<td>Aula 30 - Aula prática</td>
+									<td>Aula 25 - Exercícios</td>
+									<td>Aula 40 - Conteúdo específico</td>
+									<td>Aula 30 - Aula prática</td>
+									<td>Aula 25 - Exercícios</td>
+									<td>Aula 40 - Conteúdo específico</td>
+								</tr>
 
-				<video width="820" height="620" controls>
-					<source src="movie.mp4" type="video/mp4">
-					<source src="movie.ogg" type="video/ogg">
-					Your browser does not support the video tag.
-				  </video>
+								<tr>
+									<th scope="row">Semana 5</th>
+									<td>Aula 30 - Aula prática</td>
+									<td>Aula 25 - Exercícios</td>
+									<td>Aula 40 - Conteúdo específico</td>
+									<td>Aula 30 - Aula prática</td>
+									<td>Aula 25 - Exercícios</td>
+									<td>Aula 40 - Conteúdo específico</td>
+									<td>Aula 30 - Aula prática</td>
+									<td>Aula 25 - Exercícios</td>
+									<td>Aula 40 - Conteúdo específico</td>
+								</tr>
+								<tr>
+									<th scope="row">Semana 6</th>
+									<td>Aula 30 - Aula prática</td>
+									<td>Aula 25 - Exercícios</td>
+									<td>Aula 40 - Conteúdo específico</td>
+									<td>Aula 30 - Aula prática</td>
+									<td>Aula 25 - Exercícios</td>
+									<td>Aula 40 - Conteúdo específico</td>
+									<td>Aula 30 - Aula prática</td>
+									<td>Aula 25 - Exercícios</td>
+									<td>Aula 40 - Conteúdo específico</td>
+								</tr>
 
-				  
-	
+								<tr>
+									<th scope="row">Semana 7</th>
+									<td>Aula 30 - Aula prática</td>
+									<td>Aula 25 - Exercícios</td>
+									<td>Aula 40 - Conteúdo específico</td>
+									<td>Aula 30 - Aula prática</td>
+									<td>Aula 25 - Exercícios</td>
+									<td>Aula 40 - Conteúdo específico</td>
+									<td>Aula 30 - Aula prática</td>
+									<td>Aula 25 - Exercícios</td>
+									<td>Aula 40 - Conteúdo específico</td>
+								</tr>
+
+								<tr>
+									<th scope="row">Semana 8</th>
+									<td>Aula 30 - Aula prática</td>
+									<td>Aula 25 - Exercícios</td>
+									<td>Aula 40 - Conteúdo específico</td>
+									<td>Aula 30 - Aula prática</td>
+									<td>Aula 25 - Exercícios</td>
+									<td>Aula 40 - Conteúdo específico</td>
+									<td>Aula 30 - Aula prática</td>
+									<td>Aula 25 - Exercícios</td>
+									<td>Aula 40 - Conteúdo específico</td>
+								</tr>
+
+								<tr>
+									<th scope="row">Semana 9</th>
+									<td>Aula 30 - Aula prática</td>
+									<td>Aula 25 - Exercícios</td>
+									<td>Aula 40 - Conteúdo específico</td>
+									<td>Aula 30 - Aula prática</td>
+									<td>Aula 25 - Exercícios</td>
+									<td>Aula 40 - Conteúdo específico</td>
+									<td>Aula 30 - Aula prática</td>
+									<td>Aula 25 - Exercícios</td>
+									<td>Aula 40 - Conteúdo específico</td>
+								</tr>
+
+								<tr>
+									<th scope="row">Semana 10</th>
+									<td>Aula 30 - Aula prática</td>
+									<td>Aula 25 - Exercícios</td>
+									<td>Aula 40 - Conteúdo específico</td>
+									<td>Aula 30 - Aula prática</td>
+									<td>Aula 25 - Exercícios</td>
+									<td>Aula 40 - Conteúdo específico</td>
+									<td>Aula 30 - Aula prática</td>
+									<td>Aula 25 - Exercícios</td>
+									<td>Aula 40 - Conteúdo específico</td>
+								</tr>
+						</tbody>
+						</table>
+					</div>
+				</div>
 			</div>
-			<div class="position-scroll-aula2">
-
-			  <scroll-container>
-				<scroll-page id="page-1">1</scroll-page>
-				<scroll-page id="page-2">2</scroll-page>
-				<scroll-page id="page-3">3</scroll-page>
-				<scroll-page id="page-1">4</scroll-page>
-				<scroll-page id="page-2">5</scroll-page>
-				<scroll-page id="page-3">6</scroll-page>
-				<scroll-page id="page-1">7</scroll-page>
-				<scroll-page id="page-2">8</scroll-page>
-				<scroll-page id="page-3">9</scroll-page>
-				<scroll-page id="page-1">10</scroll-page>
-				<scroll-page id="page-2">11</scroll-page>
-				<scroll-page id="page-3">12</scroll-page>
-			  </scroll-container>
-			</div>
-
-
 		</div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+     </div>
+	</div>
 			<footer class="footer">
 				<div class="container-fluid">
 					<div class="row text-muted">
 						<div class="col-8 text-start">
 							<ul class="list-inline">
 								<li class="list-inline-item">
-									<a class="text-muted" href="#">Suporte</a>
+									<a class="text-muted" href="https://api.whatsapp.com/send?1=pt_BR&phone=556141027804">Suporte</a>
 								</li>
 							</ul>
 						</div>
@@ -342,9 +390,6 @@
 					</div>
 				</div>
 			</footer>
-		</div>
-
-	</div>
 
 	<svg width="0" height="0" style="position:absolute">
 		<defs>
@@ -355,6 +400,7 @@
 			</symbol>
 		</defs>
 	</svg>
+
 	<script src="js/app.js"></script>
 
 	<script>
