--- a/financeiro.html
+++ b/financeiro.html
@@ -216,7 +216,8 @@
 
 			<!-- tab financeiro -->
 
-			<div class="tabela-position">
+			<div class="tabela-position-finan">
+
 			<div class="col-12">
 				<div class="card">
 					<div class="card-header">
