--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 			<a href="index.html">
 				<img class="logo" src="/img/img-logo/logo.png" />
 			</a>
+			<div class="espass"><br></div>
 
 			<div class="sidebar-content">
 				<!-- img usuario -->
