--- a/produtos-loja.html
+++ b/produtos-loja.html
@@ -216,11 +216,12 @@
 
 			<!-- tab financeiro -->
 
-			<div class="tabela-position">
+			<div class="tabela-loja-position">
+
 			<div class="col-12">
 				<div class="card">
 					<div class="card-header">
-						<h5 class="card-title">Financeiro</h5>
+						<h5 class="card-title">Loja virtual E-commerce</h5>
 						<h6 class="card-subtitle text-muted">Dúvidas sobre seu pagamento, entre em contato com nosso <strong>Suporte.</strong></h6>
 					</div>
 					<div class="card-body">
